tests/NormalTests/paczka1/small_fuzzy/23411288.err
Error in line 1: Ax68LoV A449 44,3
Error in line 10: 37ws4t7zjR A449 58,7
